[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://enemies/slime.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/slime_boss.gd" type="Script" id=3]
[ext_resource path="res://scripts/shoot_box_slime.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack"

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 80, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 80, 416, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 416, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 0.4, 0.4 )

[node name="slime_boss" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 1.52588e-05, 0 )
scale = Vector2( 10, 10 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -11.2, -3.6 )
polygon = PoolVector2Array( 14, -3.2, 14.4, -2.4, 15.2, -2, 15.6, -1.2, 16, 2, 16.4, 2.8, 17.2, 4, 18, 4, 18, 8.8, 4.4, 8.8, 4.4, 4, 5.2, 4, 5.2, 2, 6, 1.6, 6.4, 0.8, 6.8, -1.2, 7.2, -2, 8, -2.4, 8.4, -3.2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 4.4, 0.4 )
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -15.6, -4 )
polygon = PoolVector2Array( 14, -3.2, 14.4, -2.4, 15.2, -2, 15.6, -1.2, 16, 2, 16.4, 2.8, 17.2, 4, 18, 4, 18, 8.8, 4.4, 8.8, 4.4, 4, 5.2, 4, 5.2, 2, 6, 1.6, 6.4, 0.8, 6.8, -1.2, 7.2, -2, 8, -2.4, 8.4, -3.2 )

[node name="attack" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2.4 )
frames = SubResource( 12 )
animation = "attack"
frame = 5
playing = true

[node name="slime" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.52588e-06, 5.96046e-08 )
amount = 24
emission_rect_extents = Vector2( 5, 5 )
scale_amount_random = 1.0

[node name="tween" type="Tween" parent="."]

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="shoot_box_0" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_0"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_30" type="Area2D" parent="."]
rotation = 0.523599
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_30"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_60" type="Area2D" parent="."]
rotation = 1.0472
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_60"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_90" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_90"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_120" type="Area2D" parent="."]
rotation = 2.0944
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_120"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_150" type="Area2D" parent="."]
rotation = 2.61799
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_150"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_180" type="Area2D" parent="."]
rotation = 3.14159
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_180"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_210" type="Area2D" parent="."]
rotation = 3.66519
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_210"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_240" type="Area2D" parent="."]
rotation = 4.18879
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_240"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_270" type="Area2D" parent="."]
rotation = 4.71239
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_270"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_300" type="Area2D" parent="."]
rotation = 5.23599
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_300"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true

[node name="shoot_box_330" type="Area2D" parent="."]
rotation = 5.75959
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_box_330"]
position = Vector2( -2.98023e-08, 0 )
shape = SubResource( 13 )
disabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_300" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_330" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_210" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_0" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_30" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_60" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_180" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_120" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_150" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_240" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_270" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="shoot_box_90" method="_on_shoot_timer_timeout"]
